Add a Java function.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">KotlinPractice</string>
+    <string name="app_name">Kotlin</string>
     <string name="menu1">menu1</string>
     <string name="menu2">menu2</string>
     <string name="c_name">CCC singleTop</string>
