--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
     <string name="menu1">menu1</string>
     <string name="menu2">menu2</string>
     <string name="c_name">CCC singleTop</string>
+
+    <string name="photo">拍照</string>
+    <string name="album">相册</string>
+    <string name="choose">选择</string>
+    <string name="cancel">取消</string>
 </resources>
