--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,6 @@
     <string name="menu1">menu1</string>
     <string name="menu2">menu2</string>
     <string name="c_name">CCC singleTop</string>
-
-    <string name="photo">拍照</string>
-    <string name="album">相册</string>
-    <string name="choose">选择</string>
-    <string name="cancel">取消</string>
+    <string name="open">开</string>
+    <string name="close">关</string>
 </resources>
